# QuadTargetPP

./: CMakeLists.txt  README.md  config.ini
src/: ImageCycler.cpp  ImageCycler.h  Marker.cpp  Marker.h  Target.cpp  Target.h  TargetFinder.cpp  TargetFinder.h  TargetFinder_orig.cpp  TargetFinder_orig.h  TargetModel.cpp  TargetModel.h  main.cpp  stub.cpp
